# conduit

./: .env.example  .gitignore  AUDIT_AND_IMPROVEMENT_PLAN.md  Anchor.toml  BACKLOG.md  CLAUDE.md  Cargo.toml  DECISIONS.md  DEMO_SCRIPT.md  README.md  SETUP.md  SUBMISSION.md  WORKLOG.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
agent/: package.json
agent/src/: config.ts  index.ts  seed.ts
agent/src/ai/: claude.ts  reasoning.ts
agent/src/core/: agent.ts  (+2 more)
dashboard/: next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
dashboard/e2e/: dashboard.spec.ts
docker/: agent.Dockerfile  docker-compose.yml  validator.Dockerfile
programs/agent-registry/: Cargo.toml
programs/agent-registry/src/: errors.rs  lib.rs
programs/agent-registry/src/instructions/: deactivate_agent.rs  mod.rs  reactivate_agent.rs  register_agent.rs  register_institution.rs  update_agent_tier.rs
programs/agent-registry/src/state/: agent.rs  institution.rs  mod.rs
programs/audit-log/: Cargo.toml
programs/settlement/: Cargo.toml
programs/settlement/src/: errors.rs  lib.rs
programs/settlement/src/instructions/: add_entry.rs  create_batch.rs  execute_settlement.rs  initialize_config.rs  mod.rs  update_fx_rate.rs
programs/settlement/src/state/: config.rs  fx_oracle.rs  mod.rs  settlement_batch.rs  settlement_entry.rs
programs/vault/: Cargo.toml
sdk/: package.json
sdk/src/: decode.ts  index.ts
tests/: agent-registry.test.ts  audit-log.test.ts  package.json  settlement.test.ts  tsconfig.json  vault.test.ts
(+74 files in other folders)
